--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "build": "gulp build --production"
   },
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "foundation-sites": "~6.4.1",
     "jquery": ">=3.0.0",
     "what-input": "^4.1.3",
-    "motion-ui": "~1.2.2"
-  },
-  "devDependencies": {
+    "motion-ui": "~1.2.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.3.13",
