--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "@first-lego-league/user-interface",
   "description": "First Lego Legague styles standard and components",
+  "version": "1.3.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/zurb/foundation-zurb-template.git"
   },
-  "author": "Idan Stark <idanstark42@gmail.com>",
-  "version": "1.3.5",
+  "license": "GPL-3.0",
   "main": "gulpfile.babel.js",
+  "files": [
+    "current/**",
+    "package.json",
+    "README.md",
+    "LICENSE",
+    ".gitignore",
+    "module.yml"
+  ],
   "scripts": {
     "start": "gulp",
     "build": "gulp build --production",
     "prepack": "yarn build"
   },
-  "license": "MIT",
   "devDependencies": {
     "semantic-ui": "^2.4.2"
   }
