--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@first-lego-league/user-interface",
   "description": "First Lego Legague styles standard and components",
-  "version": "1.3.5",
+  "version": "2.0.0-beta",
   "repository": {
     "type": "git",
     "url": "https://github.com/zurb/foundation-zurb-template.git"
@@ -9,12 +9,7 @@
   "license": "GPL-3.0",
   "main": "gulpfile.babel.js",
   "files": [
-    "current/**",
-    "package.json",
-    "README.md",
-    "LICENSE",
-    ".gitignore",
-    "module.yml"
+    "current/**"
   ],
   "scripts": {
     "start": "gulp",
