--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "jquery": "^3.4.1",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui": "^2.4.2",
+    "toastr": "^2.1.4"
   }
 }
