--- a/src/theme.config
+++ b/src/theme.config
@@ -38,6 +38,7 @@
 @reveal      : 'default';
 @segment     : 'default';
 @step        : 'default';
+@toast       : 'default';
 
 /* Collections */
 @breadcrumb  : 'default';
