--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@first-lego-league/user-interface",
   "description": "First Lego Legague styles standard and components",
-  "version": "2.0.0-beta",
+  "version": "2.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/zurb/foundation-zurb-template.git"
