--- a/package.json
+++ b/package.json
@@ -17,8 +17,38 @@
     "prepack": "yarn build"
   },
   "devDependencies": {
+    "better-console": "^1.0.1",
+    "del": "^5.0.0",
+    "extend": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-chmod": "^3.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-clone": "^2.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-copy": "^4.0.1",
+    "gulp-dedupe": "^0.0.2",
+    "gulp-flatten": "^0.4.0",
+    "gulp-header": "^2.0.7",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-less": "^4.0.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-print": "^5.0.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rtlcss": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1",
     "jquery": "^3.4.1",
+    "map-stream": "^0.0.7",
+    "replace-ext": "^1.0.0",
+    "require-dot-file": "^0.4.0",
+    "run-sequence": "^2.2.1",
     "semantic-ui": "^2.4.2",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "yamljs": "^0.3.0"
   }
 }
